Improvements :

* Fixed SXRenderer tests to account for new noise algorithm in 3delight.

7.2.0:

Additions :

* Added MeshFaceFilterOp for pruning faces on MeshPrimitives.

* Added a ClampOp, for clamping values in ImagePrimitives.

* Added IECoreArnold::UniverseBlock, for managing AiBegin/AiEnd pairs.

* Added SWAReader, for reading Speed Tree forest files.

* Added IECoreMaya::ToMayaCameraConverter, which supports the same attributes as IECoreMaya::FromMayaCameraConverter

* Added bindings for Imf::TimeCode

* Added IECore::TimeCodeData and TimeCodeParameter

Improvements :

* IECoreMaya::ToMayaSkinClusterConverter has a new parameter to ignore the bindPose node

* IECoreMaya::ClassParameterHandler and ClassVectorParameterHandler have a 1-plug mode and a 4-plug mode to handle the held classes. The 4-plug mode is the default for compatibility, but will be removed completely in Cortex 8. Users can specify ['maya']['compactClassPlugs'] userData to help migrate existing scenes to the 1-plug mode.

* EXRImageReader and EXRImageWriter now handle Imf::TimeCodes if they are present in the exr header or ImagePrimitive blindData, respectively.

Bug Fixes :

* IECoreRI.Renderer now gracefully ignores null values in parameter lists rather than crashing.
* IECoreMaya::ToMayaSkinClusterConverter now catches failures from MDGModifier::doIt(), calls  MDGModifier::undoIt(), and throws.

7.1.3:

Bug Fixes :

* Fixed component bound output bug in maya ProceduralHolder node

7.1.2:

Improvements :

* Added support for uniform primitive variables in IECoreRI::SXRenderer

* IECoreMaya PresetsUI LoadUI organizes the applicable presets by the path they came from

Bug fixes :

* Fixed exceptions when passing 64bit integers from python to MurmurHash.append method.

* Added "PHOTOMETRIC_MINISWHITE" to supported photometric interpretations in IECore::TIFFImageReader, so it can read 3delight's depthmap shadows.

7.1.1:

Bug Fixes :
